메타태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="던전노트"
-      content="던전노트"
-    />
+    <meta name="title" content="던전노트">
+    <meta name="description" content="타이밍RPG 던전노트">
+    <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dungeonnote.com">
+<meta property="og:title" content="던전노트">
+<meta property="og:description" content="타이밍RPG 던전노트">
+<meta property="og:image" content="https://postfiles.pstatic.net/MjAyMjEwMjFfNDIg/MDAxNjY2MzA1ODE5NjE5.etrFt-a_IPcVF3MIxnTv9o0pw5cqlKqvEbfi3IjV6N8g.yqp1FqofLIAeeum51g0aFDy2_WB6mZ1V_Jrb9QOWeNsg.PNG.qirtudgus2/og_img.png?type=w966">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
